# ics-to-wiki

./: .env.example  .envrc  .gitignore  README.md  config_example.toml  flake.nix  pyproject.toml
src/: config.py  main.py
src/ics_to_wiki/: config.py  main.py
