[project]
name = "ics-to-wiki"
version = "0.1.0"
description = "simple Python script to convert iCalendar (.ics) files into a wiki-friendly table"
requires-python = ">=3.12"
dependencies = [
    "icalendar>=6.3.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "tomli>=2.3.0",
]

[project.scripts]
ics-to-wiki = "ics_to_wiki.main:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
